[tool.poetry]
name = "access-control"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.2.10"
psycopg2-binary = "^2.9.10"
yarl = "1.18.0" # yarl 1.18.2 doesn't download
langchain = "^0.3.9"
langchain-community = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
